added change user info endpoint
